Split out 'category' and 'products' endpoints
